add more images and index.html

--- a/html/index.html
+++ b/html/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
-<head>
-
+<html lang ="en">
+<link href='../css/bootstrap.css' rel='stylesheet'>
+<head> 
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+	<meta name="viewport" content="width-device-width, initial-scale=1">
+	
+	<title>Vegan Kitchen</title>
 </head>
 
 <body>
+	<h1>Welcome to our Vegan Kithen</h1>
+	<p>Vegan Kitchen is an optional webpage from Minimalist Baker. This webpage is a part of final project during programming class from CodeFirst:Girl. The content of this website has been modified based on Minimalist Baker webstite. The Minimalist Baker is a website devoted to simple cooking. All recipes require 10 ingredients or less, 1 bowl or 1 pot, or 30 minutes or less to prepare. This Minimalist Baker has been founded by Dana and John in 2012. The Minimalist Baker is currently situated in Portland, Oregon.</p>
 
-</body>
+	<h1>The Recipes</h1>
+	<p>Because everyone can benefit from incorporating more plants into their diets, our recipes are special-diet friendly, specifically plant-based and gluten-free.</p>
+	
+	
+	</body>
+</html>
