updates index test

--- a/html/recipe1.html
+++ b/html/recipe1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Our Recipe</title>
+    <title>ALMOND BUTTER CHOCOLATE CHIP COOKIES</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -42,6 +42,9 @@
                     <a class="nav-link" href="#">Blog</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#">Gallery</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#">Attribution</a>
                 </li>
                 <li class="nav-item">
@@ -54,7 +57,7 @@
       <!--This is jumbotron-->
       <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-3">Fluid jumbotron</h1>
+    <h1 class="display-3">ALMOND BUTTER CHOCOLATE CHIP COOKIES</h1>
     <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
       
       <!-This is media responsive-->
