try to add piece of code

--- a/html/recipe1.html
+++ b/html/recipe1.html
@@ -58,7 +58,7 @@
       <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-3">ALMOND BUTTER CHOCOLATE CHIP COOKIES</h1>
-    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+    <p class="lead">Tender, healthy chocolate chip cookies with almond butter, coconut, and chocolate chips. One bowl, 9 ingredients, and naturally sweetened!</p>
       
       <!-This is media responsive-->
       
