adds newsletter sign up field

--- a/html/index.html
+++ b/html/index.html
@@ -209,6 +209,15 @@
       <button class='btn btn-instagram btn-sm'><a href="https://www.instagram.com/minimalistbaker/">Instagram </a></button>
     </div>
     <br>
+    <form>
+         <label for="exampleInputEmail1">Sign up to our newsletter</label>
+         <div class="form-inline">
+             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+             <button type="submit" class="btn btn-primary">Submit</button>
+         </div>
+         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+     </form>
+     <br>
   </footer>
    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
