--- a/html/index.html
+++ b/html/index.html
@@ -179,8 +179,7 @@
           </div>
         </div>
         <div class="container">
-            <div class="col-md-4" id="team-pic">
-             <img src="../images/team3.jpg">
+            <div class="col-md-2" id="team-pic">
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
@@ -300,7 +299,9 @@
     <br>
   </footer>
   
-   <!-- Modal 1 -->
+   <!--This is a pop up for Recipe -->
+  
+    <!-- Modal 1 -->
     <div class="Recipe-modal modal fade" id="RecipeModal1" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
