--- a/html/index.html
+++ b/html/index.html
@@ -168,7 +168,45 @@
       </div>
     </section>
    
-     
+      <!-- Kitchen -->
+    <section id="Kitchen">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">Kitchen</h2>
+            <h3 class="section-subheading text-muted">Behind the kitchen where these recipes created</h3>
+              <img src="../images/kitchen.jpg">
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Simple</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          </div>
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Quick</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          </div>
+          <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x text-primary"></i>
+              <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+            </span>
+            <h4 class="service-heading">Delicious</h4>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+      
      <!-- This is Team -->
     <section class="bg-light" id="Team">
       <div class="container">
@@ -180,6 +218,7 @@
         </div>
         <div class="container">
             <div class="col-md-2" id="team-pic">
+                <img src="../images/team3.jpg">
               <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
@@ -297,6 +336,15 @@
       <button class='btn btn-instagram btn-sm'><a href="https://www.instagram.com/minimalistbaker/">Instagram </a></button>
     </div>
     <br>
+    <form>
+         <label for="exampleInputEmail1">Sign up to our newsletter</label>
+         <div class="form-inline">
+             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+             <button type="submit" class="btn btn-primary">Submit</button>
+         </div>
+         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+     </form>
+     <br>
   </footer>
   
    <!--This is a pop up for Recipe -->
