adds recipe 4, 5, and 6

--- a/html/index.html
+++ b/html/index.html
@@ -129,11 +129,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/Recipe/04-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="../images/recipe4.jpg" alt="">
             </a>
             <div class="Recipe-caption">
-              <h4>Recipe4</h4>
-              <p class="text-muted">Recipe4</p>
+              <h4>White Chocolate Truffles</h4>
+              <p class="text-muted"><a href="https://minimalistbaker.com/5-ingredient-white-chocolate-truffles/">Source</a></p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 Recipe-item">
@@ -143,11 +143,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/Recipe/05-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="../images/recipe5.jpg" alt="">
             </a>
             <div class="Recipe-caption">
-              <h4>Recipe5</h4>
-              <p class="text-muted">Recipe5</p>
+              <h4>Oatmeal Chocolate Chip Cookies</h4>
+              <p class="text-muted"><a href="https://minimalistbaker.com/gluten-free-oatmeal-chocolate-chip-cookies/">Source</a></p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 Recipe-item">
@@ -157,11 +157,11 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/Recipe/06-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="../images/recipe6.jpg" alt="">
             </a>
             <div class="Recipe-caption">
-              <h4>Recipe6</h4>
-              <p class="text-muted">Recipe6</p>
+              <h4>Cinnamon Baked Apples</h4>
+              <p class="text-muted"><a href="https://minimalistbaker.com/easy-cinnamon-baked-apples/">Source</a></p>
             </div>
           </div>
         </div>
@@ -532,17 +532,29 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/Recipe/02-full.jpg" alt="">
+                  <h2 class="text-uppercase">White Chocolate Truffles</h2>
+                  <p class="item-intro text-muted">Creamy, perfectly sweet, vegan white chocolate truffles made with 5 ingredients! Low sugar, easy to make, and entirely plant-based!</p>
+                  <img class="img-fluid d-block mx-auto" src="../images/recipe4.jpg" alt="">
                   <p><strong>Ingredients</strong></p>
                   <ul class="pop-uplist">
-                    <li>FILLING</li>
-                    <li>1 1/2 cups (180 g) raw cashews (soaked overnight in cool water or in very hot water for 1 hour)</li>
+                    <li>TRUFFLES</li>
+                    <li>1/2 cup (67 g) raw macadamia nuts</li>
+                    <li>1 1/2 cups (120 g) desiccated (finely shredded) unsweetened coconut</li>
+                    <li>1/4 cup (54 g) finely chopped cocoa butter, melted</li>
+                    <li>2-4 Tbsp (16-32 g) organic powdered sugar (or sub stevia to taste*)</li>
+                    <li>1/2 tsp vanilla extract</li>
+                    <li>optional: pinch sea salt</li>
+                    <li>FOR ROLLING</li>
+                    <li>3/4 cup (60 g) desiccated (finely shredded) unsweetened coconut</li>
                   </ul>
                   <p><strong>Method</strong></p>
                   <ol class="pop-uplist">
-                    <li>Add cashews to a bowl, cover with very hot water, and let soak 1 hour. Or cover with cool water and let soak for 6-8 hours or overnight. Drain well and set aside.</li>
+                    <li>Add macadamia nuts and (1 1/2 cups) desiccated coconut to a food processor and mix until a creamy paste is formed, scraping down sides as needed.</li>
+                    <li>Add melted cocoa butter, powdered sugar, vanilla, and sea salt (optional) and mix once more to combine (see photo). Taste and adjust flavor as needed, adding more salt for saltiness, vanilla for vanilla flavor, or powdered sugar for sweetness.</li>
+                    <li>Transfer the mixture to a shallow plate or a bowl and place in the refrigerator to chill for about 1 hour or until firm to the touch (especially in the center). In the meantime, add 3/4 cup desiccated coconut to a small dish (for rolling). Set aside.</li>
+                    <li>Remove mixture from refrigerator and use a Tablespoon or small cookie scoop (I like this one) to scoop out rounded Tablespoon amounts. Either leave as a "disc" shape or gently roll into balls. If you roll for too long, they can start to melt, so don't fuss too much with the shape.</li>
+                    <li>Once formed, add to the desiccated coconut dish and roll to coat. Set on a serving plate. Repeat until all truffles are rolled - about 10.</li>
+                    <li>Set back in refrigerator for 5-10 minutes until mostly firm/set. Store leftovers at room temperature up to 3-4 days, in the refrigerator for 1 week, or in the freezer for 1 month. Best enjoyed at room temperature.</li>
                   </ol>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -569,17 +581,33 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/Recipe/02-full.jpg" alt="">
+                  <h2 class="text-uppercase">Oatmeal Chocolate Chip Cookies</h2>
+                  <p class="item-intro text-muted">Healthy, vegan, and gluten-free oatmeal chocolate chip cookies made with 10 wholesome ingredients! Tender on the inside, crunchy on the outside, SO delicious!</p>
+                  <img class="img-fluid d-block mx-auto" src="../images/recipe5.jpg" alt="">
                   <p><strong>Ingredients</strong></p>
                   <ul class="pop-uplist">
-                    <li>FILLING</li>
-                    <li>1 1/2 cups (180 g) raw cashews (soaked overnight in cool water or in very hot water for 1 hour)</li>
+                    <li>3/4 cup (84 g) almond flour or almond meal</li>
+                    <li>3/4 cup (67 g) rolled oats</li>
+                    <li>1/4 cup (20 g) finely shredded (desiccated) unsweetened coconut (or you could try and sub more almond meal, oats, or even GF flour blend)</li>
+                    <li>1/4 cup (30 g) vegan dark chocolate (chips or chopped bar)</li>
+                    <li>3/4 tsp baking powder</li>
+                    <li>1/4 tsp sea salt</li>
+                    <li>1/3 cup packed (73 g) organic brown sugar or muscovado sugar (or sub coconut sugar)</li>
+                    <li>1/4 cup (60 ml) aquafaba (the brine/liquid in a can of chickpeas)</li>
+                    <li>2 Tbsp (32 g) almond butter* (or other nut or seed butter)</li>
+                    <li>3 Tbsp (45 ml) avocado or melted coconut oil</li>
+                    <li>optional: 1/2 tsp vanilla extract</li>
                   </ul>
                   <p><strong>Method</strong></p>
                   <ol class="pop-uplist">
-                    <li>Add cashews to a bowl, cover with very hot water, and let soak 1 hour. Or cover with cool water and let soak for 6-8 hours or overnight. Drain well and set aside.</li>
+                    <li>In a large mixing bowl, stir together almond flour, oats, coconut, vegan chocolate, baking powder, salt, and sugar.</li>
+                    <li>In a separate bowl, beat aquafaba (using a handheld mixer or by whisking vigorously) until light and fluffy and loose peaks have formed. (Add a little cream of tartar to help them along if not whipping.)</li>
+                    <li>To the aquafaba, add the almond butter, oil, and vanilla (optional) and beat or whisk to combine. (The mixture will deflate a little - that's OK). Then add to dry ingredients and mix until combined. You should have a firm, semi-tacky dough (see photo). Cover and chill in the refrigerator for at least 30 minutes or overnight.</li>
+                    <li>Preheat oven to 350 degrees F (176 C) and either lightly grease or line a baking sheet with parchment paper.</li>
+                    <li>Scoop chilled dough into roughly 2-Tablespoon amounts (I like this scoop) and form into small discs (see photo). Place on baking sheet with about a 1-inch gap in between each cookie to allow for spreading. There should be about 12 cookies.</li>
+                    <li>Bake for 10 minutes. Then increase oven temperature to 375 degrees F (190 C) and bake for another 2-4 minutes or until the edges are slightly golden brown. Be careful not to burn (especially on the bottoms) - they bake quickly toward the end.</li>
+                    <li>Remove from oven and let cool for 5 minutes. Then carefully loosen with a spatula - they can stick a little to the bare pan.</li>
+                    <li>Store leftovers in a loosely sealed container at room temperature up to 3 days, in the refrigerator for 4 days, or in the freezer for 1 month. These are so delicious when warm and dipped in almond milk orhot cocoa! I recommend storing them in the freezer once cooked to help the retain their crispy exterior.</li>
                   </ol>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
@@ -606,17 +634,29 @@
               <div class="col-lg-8 mx-auto">
                 <div class="modal-body">
                   <!-- Project Details Go Here -->
-                  <h2 class="text-uppercase">Project Name</h2>
-                  <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/Recipe/02-full.jpg" alt="">
+                  <h2 class="text-uppercase">Cinnamon Baked Apples</h2>
+                  <p class="item-intro text-muted">Easy Cinnamon Baked Apples requiring simple ingredients, 1 bowl, plus naturally sweetened! The perfect grain- and gluten-free plant-based dessert for the holidays and beyond!</p>
+                  <img class="img-fluid d-block mx-auto" src="../images/recipe6.jpg" alt="">
                   <p><strong>Ingredients</strong></p>
                   <ul class="pop-uplist">
-                    <li>FILLING</li>
-                    <li>1 1/2 cups (180 g) raw cashews (soaked overnight in cool water or in very hot water for 1 hour)</li>
+                    <li>6-7 medium to large apples (~1100 g // 2 tart (like granny smith), 4 sweet (like honeycrisp) // organic when possible)</li>
+                    <li>2 Tbsp (30 ml) lemon juice</li>
+                    <li>optional: 1 Tbsp (15 ml) coconut oil</li>
+                    <li>2/3 cup (128 g) coconut sugar (or sub organic cane sugar // sub up to half with stevia to taste*)</li>
+                    <li>1 1/2 tsp ground cinnamon</li>
+                    <li>3/4 tsp fresh grated ginger or 1/2 tsp ground ginger</li>
+                    <li>Pinch nutmeg</li>
+                    <li>3 Tbsp (21 g) cornstarch or arrowroot starch (for thickening the sauce)</li>
+                    <li>3 Tbsp (45 ml) fresh apple juice or water</li>
+                    <li>Pinch sea salt</li>
                   </ul>
                   <p><strong>Method</strong></p>
                   <ol class="pop-uplist">
-                    <li>Add cashews to a bowl, cover with very hot water, and let soak 1 hour. Or cover with cool water and let soak for 6-8 hours or overnight. Drain well and set aside.</li>
+                    <li>Preheat oven to 350 degrees F (176 C) and set out a 9x13-inch (or similar size) baking dish.</li>
+                    <li>Peel and core apples, quarter, and use a paring knife to thinly slice lengthwise (see photo). The thinner the better! Just try to be consistent so they cook evenly.</li>
+                    <li>Add to baking dish and top with lemon juice, coconut oil (optional), coconut sugar, cinnamon, ginger, nutmeg, cornstarch (or arrowroot), apple juice (or water), and a healthy pinch of salt. Toss to combine. Then loosely cover with foil.</li>
+                    <li>Bake for 45 minutes (covered). Then carefully remove foil and bake for an additional 10-15 minutes or until the apples are very fork tender (especially in the center of the dish) and slightly caramelized (see photo).</li>
+                    <li>Enjoy as is or with Coconut Whipped Cream or Vanilla Bean Coconut Ice Cream! Best when fresh, though leftovers keep covered in the refrigerator up to 3-4 days or in the freezer up to 1 month. Reheat in the microwave or in a 350-degree F (176 C) oven (covered) until warmed through. Add a bit of water if the "caramel" sauce is too thick.</li>
                   </ol>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
