fixes bullet point alignment in recipes

--- a/html/index.html
+++ b/html/index.html
@@ -369,19 +369,23 @@
                   <p><strong>Ingredients</strong></p>
                   <ul class="pop-uplist">
                     <li>FILLING</li>
-                    <li>1 1/2 cups (180 g) raw cashews (soaked overnight in cool water or in very hot water for 1 hour)</li>
-                    <li>optional: 1 tsp vanilla extract</li>
-                    <li>1 lemon, juiced (~3 Tbsp or 45 ml)</li>
-                    <li>1/4 cup (60 ml) light coconut milk (or sub full-fat coconut milk)</li>
-                    <li>scant 1/4 cup (53 ml) melted coconut (if avoiding oil, the recipe won't be as creamy, but you can sub 1/4 cup more coconut yogurt or coconut milk)</li>
-                    <li>1/2 cup (120 ml) maple syrup (or sub agave // use less for a more tart cheesecake)</li>
-                    <li>1/4 cup (60 g) coconut yogurt* (DIY or store-bought vegan yogurt - I like Coyo!)</li>
-                    <li>1/4 tsp sea salt</li>
-                    <li>1 1/2 - 2 tsp matcha green tea powder (I like Townshend's and Organic Matcha)</li>
+                      <ul>
+                        <li>1 1/2 cups (180 g) raw cashews (soaked overnight in cool water or in very hot water for 1 hour)</li>
+                       <li>optional: 1 tsp vanilla extract</li>
+                        <li>1 lemon, juiced (~3 Tbsp or 45 ml)</li>
+                        <li>1/4 cup (60 ml) light coconut milk (or sub full-fat coconut milk)</li>
+                        <li>scant 1/4 cup (53 ml) melted coconut (if avoiding oil, the recipe won't be as creamy, but you can sub 1/4 cup more coconut yogurt or coconut milk)</li>
+                        <li>1/2 cup (120 ml) maple syrup (or sub agave // use less for a more tart cheesecake)</li>
+                        <li>1/4 cup (60 g) coconut yogurt* (DIY or store-bought vegan yogurt - I like Coyo!)</li>
+                        <li>1/4 tsp sea salt</li>
+                        <li>1 1/2 - 2 tsp matcha green tea powder (I like Townshend's and Organic Matcha)</li>
+                      </ul>
                     <li>CRUST</li>
-                    <li>1 cup packed medjool dates (about 22 dates or 275 g), pitted (pitted before measuring)</li>
-                    <li>1 1/2 cups (155 g) raw walnuts (or sub raw almonds)</li>
-                    <li>Pinch sea salt</li>
+                      <ul>
+                        <li>1 cup packed medjool dates (about 22 dates or 275 g), pitted (pitted before measuring)</li>
+                        <li>1 1/2 cups (155 g) raw walnuts (or sub raw almonds)</li>
+                        <li>Pinch sea salt</li>
+                      </ul>
                   </ul>
                   <p><strong>Method</strong></p>
                   <ol class="pop-uplist">
@@ -485,16 +489,20 @@
                   <p><strong>Ingredients</strong></p>
                   <ul class="pop-uplist">
                     <li>MACAROONS</li>
-                    <li>4 cups (320 g) packed shredded unsweetened coconut* (see notes for brand recommendations)</li>
-                    <li>½ cup (120 ml) aquafaba (brine from canned chickpeas // see our Aquafaba Guide!)</li>
-                    <li>optional: 1/4 tsp cream of tartar (to help the aquafaba stiffen)</li>
-                    <li>7 Tbsp (105 ml) maple syrup DIVIDED (or sub stevia to taste - 1-2 packets)</li>
-                    <li>1 tsp vanilla extract</li>
-                    <li>1/4 tsp sea salt, plus more to taste</li>
-                    <li>2 Tbsp (30 g) melted coconut oil (If avoiding oil, omit // coconut oil adds moisture and helps them brown in the oven)</li>
-                    <li>CHOCOLATE COATING optional</li>
-                    <li>2/3 cup (80 g) chopped vegan dark chocolate (I like Trader Joe’s 72% dark chocolate bar)</li>
-                    <li>1 Tbsp (15 g) coconut oil (if avoiding oil, omit)</li>
+                      <ul>
+                        <li>4 cups (320 g) packed shredded unsweetened coconut* (see notes for brand recommendations)</li>
+                        <li>½ cup (120 ml) aquafaba (brine from canned chickpeas // see our Aquafaba Guide!)</li>
+                        <li>optional: 1/4 tsp cream of tartar (to help the aquafaba stiffen)</li>
+                        <li>7 Tbsp (105 ml) maple syrup DIVIDED (or sub stevia to taste - 1-2 packets)</li>
+                        <li>1 tsp vanilla extract</li>
+                        <li>1/4 tsp sea salt, plus more to taste</li>
+                        <li>2 Tbsp (30 g) melted coconut oil (If avoiding oil, omit // coconut oil adds moisture and helps them brown in the oven)</li>
+                      </ul>
+                    <li>CHOCOLATE COATING (optional)</li>
+                      <ul>
+                        <li>2/3 cup (80 g) chopped vegan dark chocolate (I like Trader Joe’s 72% dark chocolate bar)</li>
+                        <li>1 Tbsp (15 g) coconut oil (if avoiding oil, omit)</li>
+                      </ul>
                   </ul>
                   <p><strong>Method</strong></p>
                   <ol class="pop-uplist">
@@ -538,14 +546,18 @@
                   <p><strong>Ingredients</strong></p>
                   <ul class="pop-uplist">
                     <li>TRUFFLES</li>
-                    <li>1/2 cup (67 g) raw macadamia nuts</li>
-                    <li>1 1/2 cups (120 g) desiccated (finely shredded) unsweetened coconut</li>
-                    <li>1/4 cup (54 g) finely chopped cocoa butter, melted</li>
-                    <li>2-4 Tbsp (16-32 g) organic powdered sugar (or sub stevia to taste*)</li>
-                    <li>1/2 tsp vanilla extract</li>
-                    <li>optional: pinch sea salt</li>
+                      <ul>
+                        <li>1/2 cup (67 g) raw macadamia nuts</li>
+                        <li>1 1/2 cups (120 g) desiccated (finely shredded) unsweetened coconut</li>
+                        <li>1/4 cup (54 g) finely chopped cocoa butter, melted</li>
+                        <li>2-4 Tbsp (16-32 g) organic powdered sugar (or sub stevia to taste*)</li>
+                        <li>1/2 tsp vanilla extract</li>
+                        <li>optional: pinch sea salt</li>
+                      </ul>
                     <li>FOR ROLLING</li>
-                    <li>3/4 cup (60 g) desiccated (finely shredded) unsweetened coconut</li>
+                      <ul>
+                        <li>3/4 cup (60 g) desiccated (finely shredded) unsweetened coconut</li>
+                      </ul>
                   </ul>
                   <p><strong>Method</strong></p>
                   <ol class="pop-uplist">
