--- a/html/index.html
+++ b/html/index.html
@@ -222,13 +222,22 @@
             </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="../images/image1.jpg" alt="Minimalist Baker">
+                    <img class="d-block w-100" src="../images/recipe1.jpg" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../images/image2.jpg" alt="Our Phylosophy">
+                    <img class="d-block w-100" src="../images/recipe2.jpg" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../images/image3.jpg" alt="Our Recipe">
+                    <img class="d-block w-100" src="../images/recipe3.jpg" alt="">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="../images/recipe4.jpg" alt="">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="../images/recipe5.jpg" alt="">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="../images/recipe6.jpg" alt="">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
