--- a/html/recipe1almondcookie.html
+++ b/html/recipe1almondcookie.html
@@ -1,21 +1,19 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Vegan Kitchen</title>
+    <title>Almond Butter Chocolate Chip Cookies</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
+     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
 
     <!--custom css -look at styles.css-->
       <link rel="stylesheet" href="../css/styles.css">
 
   </head>
-    
   <body>
-
       <!--This is Navbar-->
 
       <nav class="navbar navbar-expand-lg navbar-darker bg-inverse">
@@ -44,7 +42,10 @@
                     <a class="nav-link" href="#">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../html/Attribution.html">Attribution</a>
+                    <a class="nav-link" href="#">Gallery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Attribution</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact us</a>
@@ -53,67 +54,16 @@
           </div>
         </nav>
 
+      <!--This is jumbotron-->
+      <div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-3">ALMOND BUTTER CHOCOLATE CHIP COOKIES</h1>
+    <p class="lead">Tender, healthy chocolate chip cookies with almond butter, coconut, and chocolate chips. One bowl, 9 ingredients, and naturally sweetened!</p>
 
-      <!--This is cover-->
+      <!-This is media responsive-->
 
-      <section id="cover">
-        <div id="cover-caption">
-            <div class="container">
-                <div class="col-sm-10 col-sm-offset-1">
-                    <h1 class="display-3">Welcome to Vegan Kitchen</h1>
-                    <p>Vegan Kitchen is an alternative website.</p>
-
-                <button type=link href=".." class="btn-success btn-lg">Meet the team</button>
-                    <button type=link href="http://www.codefirstgirls.org.uk/"
-                class="btn-success btn-lg"><a href="http://www.codefirstgirls.org.uk/">About CodeFirst:Girl</a>
-                    </button>
-                </div>
-            </div>
-        </div>
-      </section>
-
-      <div id="covershadow">
-      </div>
-
-      <div class="spacer">
-      </div>
-
-      <!-- This is carousel-->
-      <section id="carousel">
-        <div id="carousel-home" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carousel-home" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-home" data-slide-to="1"></li>
-                <li data-target="#carousel-home" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="../images/image1.jpg" alt="Minimalist Baker">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="../images/image2.jpg" alt="Our Phylosophy">
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="../images/image3.jpg" alt="Our Recipe">
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon"    aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </section>
-
-    <!--This is card-->
-
-
-    <!--This is footer-->
-
-
+  </div>
+</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
