--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#Recipe">Recipe</a>
+              <a class="nav-link js-scroll-trigger" href="#Recipe">Recipes</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#Kitchen">Kitchen</a>
@@ -64,7 +64,7 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-lead-in">Welcome To Vegan Kitchen!</div>
-          <div class="intro-heading">Let's have a joy of cooking and healthy food</div>
+          <div class="intro-heading">Sharing the joy of cooking and healthy food</div>
           <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#Recipe">Get Started</a>
         </div>
       </div>
@@ -75,8 +75,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Our Recipe</h2>
-              <h3 class="section-subheading text-muted">Tell me how to make <span></span></h3>
+            <h2 class="section-heading text-uppercase">Our Recipes</h2>
+              <h3 class="section-subheading text-muted">(When we say ours.... we mean the Minimalist Baker's) <span></span></h3>
           </div>
         </div>
         <div class="row">
