copy changes in team

--- a/html/index.html
+++ b/html/index.html
@@ -262,8 +262,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Meet our Amazing Team</h2>
-            <h3 class="section-subheading text-muted">We enjoy eating and cooking as well as love making food everyone can enjoy.</h3>
+            <h2 class="section-heading text-uppercase">Meet the Team</h2>
+            <h3 class="section-subheading text-muted">Learning to code while drooling over vegan desserts.</h3>
            </div>
            <div class="container">
             <div class="col-md-2" id="team-pic">
