fixes team photo styling

--- a/html/index.html
+++ b/html/index.html
@@ -266,25 +266,8 @@
             <h3 class="section-subheading text-muted">Learning to code while drooling over vegan desserts.</h3>
            </div>
            <div class="container">
-            <div class="col-md-2" id="team-pic">
-                <img src="../images/team3.jpg">
-              <ul class="list-inline social-buttons">
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
+            <div class="col-md-12" id="team-pic">
+                <img src="../images/team3.jpg" class="center">
             </div>
           </div>
         </div>
