--- a/html/index.html
+++ b/html/index.html
@@ -175,7 +175,7 @@
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Kitchen</h2>
             <h3 class="section-subheading text-muted">Behind the kitchen where these recipes created</h3>
-              <img src="../images/kitchen.jpg">
+              <img src="../images/kitchen.jpg" class="center">
           </div>
         </div>
         <div class="row text-center">
