centralise newletter sign up

--- a/html/index.html
+++ b/html/index.html
@@ -362,7 +362,7 @@ thanks to
     <br>
     <form>
          <label for="exampleInputEmail1">Sign up to our newsletter</label>
-         <div class="form-inline">
+         <div class="form-inline center">
              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
              <button type="submit" class="btn btn-primary">Submit</button>
          </div>
