--- a/html/index.html
+++ b/html/index.html
@@ -71,7 +71,7 @@
     </header>
 
     <!-- This is Recipe using Modals -->
-    <section class="bg-light" id="Recipe">
+    <section class="bg-lighter" id="Recipe">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -199,7 +199,7 @@
     </section>
    
       <!-- Kitchen -->
-    <section id="Kitchen">
+    <section class="bg-light" id="Kitchen">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -303,10 +303,9 @@
         </div>
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <p class="large text-muted">We are girls from CodeFirst:Girl autumn class of 2017. We enjoy learning how to code and how to cook.Therefore, we are happy to share our work with you! If you find this work is fun and wanna find out more, please hit this following button</p>
+            <p class="large text-muted">We are girls from CodeFirst:Girls autumn class of 2017. We enjoy learning how to code and how to cook.Therefore, we are happy to share our work with you! If you find this work is fun and wanna find out more, please hit this following button</p>
             <button class="btn btn-primary" type="button"> 
                 <a href="http://www.codefirstgirls.org.uk/">About CodeFirst: Girls</a> 
-                <i class="fa fa-times"></i>
             </button>
           </div>
         </div>
@@ -321,14 +320,14 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Our inspiration</h2>
-            <h3 class="section-subheading text-muted">This website inspired from several extraordinary resources. The main idea about baking was coming from the minimalist baker. The cover image was created by Photographer Daria Khoroshavina and food stylist Olga Kolesnikov. We thank Code First: Girls and our talented instrutors as well as the future coder for teaching us the amazing things.</h3>
+            <h3 class="section-subheading text-muted">This website inspired from several extraordinary resources. The main idea about baking was coming from the minimalist baker. The cover image was created by Photographer Daria Khoroshavina and food stylist Olga Kolesnikov. We thank Code First: Girls and our talented instrutors as well as the future coders for teaching us the amazing things.</h3>
             </div>
           </div>
         </div>
     </section>
       
      <!-- Contact Us -->
-    <section id="Contact">
+    <section class="bg-dark" id="Contact">
      <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Contact Us</h2>
